# SISTEMAHDR

./: AGENTS.md  CMakeLists.txt  CMakePresets.json  SISTEMAHDR.cpp  SISTEMAHDR.h
.codex/environments/: environment.toml
.github/: copilot-instructions.md
docs/: BACIAS_CIVIL3D-B2-R0A.csv  DIMENSIONAMENTO - ACO - R0A.xlsm  exemplo csv importar.csv  exemplo_canais.csv
src/: main.cpp
src/domain/: BaciaContribuicao.cpp  BaciaContribuicao.h  Bueiro.cpp  Bueiro.h  CalculadoraAcumulacaoHidrologica.cpp  CalculadoraAcumulacaoHidrologica.h  CalculoHidraulicoCanal.cpp  CalculoHidraulicoCanal.h  Canal.cpp  Canal.h  CanalTrecho.cpp  CanalTrecho.h  HidrologiaUtils.cpp  HidrologiaUtils.h  IDF.cpp  IDF.h  MetodoRacionalTransformacao.cpp  MetodoRacionalTransformacao.h  ModeloInfiltracao.h  ModeloTransformacaoChuvaVazao.h  RedeHidrologica.cpp  RedeHidrologica.h  RedeHidrologicaTesteManual.cpp  RedeHidrologicaTesteManual.h  RegistroElementosRede.cpp  RegistroElementosRede.h  RevestimentoCanal.cpp  RevestimentoCanal.h  SecaoTransversalSemicircular.h  SecaoTransversalTrapezoidal.h  SeriaPrecipitacoesDiariaHidrowebANA.cpp  SeriaPrecipitacoesDiariaHidrowebANA.h  TipoUsoOcupacaoSolo.cpp  TipoUsoOcupacaoSolo.h
src/ui/: CanalTrapezoidalWidget.cpp  CanalTrapezoidalWidget.h  MainWindow.cpp  MainWindow.h
src/ui/delegates/: DelegadoGeometriaSecaoComboBox.cpp  DelegadoGeometriaSecaoComboBox.h  DelegadoRevestimentoCanalComboBox.cpp  DelegadoRevestimentoCanalComboBox.h  DelegadoSecaoTransversalComboBox.cpp  DelegadoSecaoTransversalComboBox.h  DelegadoUsoOcupacaoSoloComboBox.cpp  DelegadoUsoOcupacaoSoloComboBox.h
src/ui/modelos/: ModeloTabelaBacias.cpp  ModeloTabelaBacias.h  ModeloTabelaCanais.cpp  ModeloTabelaCanais.h  ModeloTabelaRevestimentos.cpp  ModeloTabelaRevestimentos.h  ModeloTabelaSecoesTransversais.cpp  ModeloTabelaSecoesTransversais.h  ModeloTabelaUsoOcupacaoSolo.cpp  ModeloTabelaUsoOcupacaoSolo.h
